[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Shaders/outline.shader" type="Shader" id=1]
[ext_resource path="res://src/Effects/FireEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/named/camp_fire.png" type="Texture" id=3]
[ext_resource path="res://assets/Particles/light.png" type="Texture" id=4]
[ext_resource path="res://src/Fire/CircleFire.gd" type="Script" id=5]
[ext_resource path="res://src/Fire/CircleTreeDetector.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/enabled = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[sub_resource type="CircleShape2D" id=8]
radius = 100.0

[node name="CircleFire" type="Node2D"]
script = ExtResource( 5 )

[node name="FireSprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="FireEffect" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 2 )
scale = Vector2( 2, 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.1
color = Color( 1, 0.882353, 0.796078, 1 )
mode = 2

[node name="PlayerEnteredDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnteredDetector"]
shape = SubResource( 2 )

[node name="PlayerExitedDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerExitedDetector"]
shape = SubResource( 2 )

[node name="TreeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeDetector"]
visible = false
shape = SubResource( 8 )

[connection signal="body_entered" from="PlayerEnteredDetector" to="." method="_on_PlayerEnteredDetector_body_entered"]
[connection signal="body_exited" from="PlayerExitedDetector" to="." method="_on_PlayerExitedDetector_body_exited"]
[connection signal="area_entered" from="TreeDetector" to="TreeDetector" method="_on_TreeDetector_area_entered"]
